objects/EOF_EAI_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>SFL_SVLAN_ID__c</fullName>
        <label>SVLAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVLAN__c</fullName>
        <label>SVLAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Attribute__c</fullName>
        <label>Service Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPL</fullName>
                </value>
                <value>
                    <fullName>EVPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servizi_per_utenti_finali__c</fullName>
        <label>Servizi per utenti finali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sottocausale__c</fullName>
        <label>Sottocausale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACCIATO_TRASCODIFICATO__c</fullName>
        <label>TRACCIATO_TRASCODIFICATO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTM_NOTE__c</fullName>
        <label>TTM NOTE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TTM_TICKETID__c</fullName>
        <label>TTM TICKETID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Evento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tipo Evento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipologia_Alimentazione__c</fullName>
        <label>Tipologia Alimentazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                    <default>true</default>
                    <label>AC</label>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia_CPE__c</fullName>
        <label>Tipologia CPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low-End</fullName>
                    <default>true</default>
                    <label>Low-End</label>
                </value>
                <value>
                    <fullName>High-End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia_Sede__c</fullName>
        <label>Tipologia Sede</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrafficLoadBalancing__c</fullName>
        <label>Traffic Load Balancing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE/STANDBY</fullName>
                    <default>true</default>
                    <label>ACTIVE/STANDBY</label>
                </value>
                <value>
                    <fullName>ACTIVE/ACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traffico__c</fullName>
        <label>Traffico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionDate_Remedy__c</fullName>
        <label>actionDate Remedy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isBonificaFiglio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonificaFiglio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBonificaOrdine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonificaOrdine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBonifica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonifica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kit_in_condivisione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit in condivisione</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>EAI Service Logs (Kit in condivisione)</relationshipLabel>
        <relationshipName>Collegamenti_del_kit2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>remedy_customerId__c</fullName>
        <label>remedy_customerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remedy_customerOrder__c</fullName>
        <label>remedy_customerOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EAI Service Log</label>
    <listViews>
        <fullName>Service_LOG_EOF</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EOF_Codice_Errore__c</columns>
        <columns>EOF_Causale_Errore__c</columns>
        <columns>EOF_Tipo_Comunicazione__c</columns>
        <columns>EOF_Codice_Operatore__c</columns>
        <columns>EOF_Codice_Ordine_OLO__c</columns>
        <columns>EOF_Data_Notifica__c</columns>
        <columns>EOF_ID_Notifica__c</columns>
        <columns>EOF_Stato_Richiesta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Service_LOG EOF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_LOG_EOF_VOD</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EOF_Codice_Errore__c</columns>
        <columns>EOF_Causale_Errore__c</columns>
        <columns>EOF_Tipo_Comunicazione__c</columns>
        <columns>EOF_Codice_Operatore__c</columns>
        <columns>EOF_Codice_Ordine_OLO__c</columns>
        <columns>EOF_Data_Notifica__c</columns>
        <columns>EOF_ID_Notifica__c</columns>
        <columns>EOF_Stato_Richiesta__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EOF_Codice_Operatore__c</field>
            <operation>equals</operation>
            <value>VOD</value>
        </filters>
        <label>Service_LOG EOF VOD</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Codice Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EAI Service Logs</pluralLabel>
    <recordTypes>
        <fullName>ACK</fullName>
        <active>true</active>
        <label>ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>BILL_To_SF</fullName>
        <active>true</active>
        <label>BILL To SF</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOM_WS_OUT_ACK_NACK</fullName>
        <active>true</active>
        <label>DOM WS OUT ACK NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOM_WS_OUT_Attivazione</fullName>
        <active>true</active>
        <label>DOM WS OUT Attivazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>FiberNotify</fullName>
        <active>true</active>
        <label>FiberNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>FiberRequest</fullName>
        <active>true</active>
        <label>FiberRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>NACK</fullName>
        <active>true</active>
        <label>NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nack_Billing</fullName>
        <active>true</active>
        <description>Record Type utilizzato per creare un log in caso di errore generico sulle attività billing</description>
        <label>Nack Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CO_ACK</fullName>
        <active>true</active>
        <label>OF - CO - ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CO_ChangeOrderNotify</fullName>
        <active>true</active>
        <label>OF - CO - ChangeOrderNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CO_ChangeOrderRequest</fullName>
        <active>true</active>
        <label>OF - CO - ChangeOrderRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CO_NACK</fullName>
        <active>true</active>
        <label>OF - CO - NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_FTTH_ADD</fullName>
        <active>true</active>
        <label>OF FTTH ADD</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_COS</fullName>
        <active>true</active>
        <label>OF_PP_COS</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_KIT_ACK</fullName>
        <active>true</active>
        <label>OF - PP - KIT - ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_KIT_ActivationRequest</fullName>
        <active>true</active>
        <label>OF - PP - KIT - ActivationRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_KIT_NACK</fullName>
        <active>true</active>
        <label>OF - PP - KIT - NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_VLAN_ACK</fullName>
        <active>true</active>
        <label>OF - PP - VLAN - ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_VLAN_ActivationRequest</fullName>
        <active>true</active>
        <description>recordtype log di servizio tra OLO e SF e tra SF e OM</description>
        <label>OF - PP - VLAN - ActivationRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_VLAN_NACK</fullName>
        <active>true</active>
        <label>OF - PP - VLAN - NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_VLAN_Notify</fullName>
        <active>true</active>
        <label>OF - PP - VLAN - Notify</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_PP_VLAN_Request</fullName>
        <active>true</active>
        <label>OF - PP - VLAN_Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_RichiestaVLAN_LOG</fullName>
        <active>true</active>
        <label>OF RichiestaVLAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_ACK</fullName>
        <active>true</active>
        <label>OF - SA - ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_CD_FiberNotify</fullName>
        <active>true</active>
        <description>RecordType per le FiberNotify (i log delle comunicazioni per flusso da OM vs OLO) di attivazione dei servizi attivi afferenti ai cluster C e D</description>
        <label>OF - SA - CD - FiberNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_CeD_FiberRequest</fullName>
        <active>true</active>
        <description>RecordType per le request di attivazione dei servizi attivi afferenti ai cluster C e D</description>
        <label>OF - SA - CeD - FiberRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_Cpe</fullName>
        <active>true</active>
        <label>OF - SA - Cpe</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_FiberNotify</fullName>
        <active>true</active>
        <label>OF - SA - FiberNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_FiberRequest</fullName>
        <active>true</active>
        <label>OF - SA - FiberRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_FiberRequest_Attivazione</fullName>
        <active>true</active>
        <label>OF - SA - FiberRequest Attivazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_NACK</fullName>
        <active>true</active>
        <label>OF - SA - NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_Servizi_Aggiuntivi</fullName>
        <active>true</active>
        <label>OF - SA - Servizi Aggiuntivi</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_Vlan</fullName>
        <active>true</active>
        <label>OF - SA - Vlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_SA_Vlan_ELine</fullName>
        <active>true</active>
        <label>OF_SA_Vlan_ELine</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_Tracciamento_PNI</fullName>
        <active>true</active>
        <label>OF_Tracciamento_PNI</label>
    </recordTypes>
    <recordTypes>
        <fullName>OMNotify</fullName>
        <active>true</active>
        <label>OMNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>P2P_Attiva_Collegamento</fullName>
        <active>true</active>
        <label>P2P Attiva Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>P2P_Attiva_Collegamento_ELine</fullName>
        <active>true</active>
        <description>RT per p2p Attiva Collegamento eLine</description>
        <label>P2P Attiva Collegamento E-Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>P2P_Attiva_Ordine_ELine</fullName>
        <active>true</active>
        <description>RT per Log Ordine p2p Attiva eLine</description>
        <label>P2P Attiva Ordine E-Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>P2P_Attiva_Request_E_Line</fullName>
        <active>true</active>
        <label>P2P Attiva Request E-Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_CO_FiberRequest</fullName>
        <active>true</active>
        <label>PO_CO_FiberRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_FATT_WS_ACK_NACK</fullName>
        <active>true</active>
        <label>PO_FATT_WS_ACK_NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_BTS_Collegamento</fullName>
        <active>true</active>
        <label>PO Log BTS Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_BTS_Ordine</fullName>
        <active>true</active>
        <label>PO Log BTS Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_BTS_Request</fullName>
        <active>true</active>
        <label>PO Log BTS Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_Backhauling_Collegamento</fullName>
        <active>true</active>
        <label>PO Log Backhauling Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_Backhauling_Ordine</fullName>
        <active>true</active>
        <label>PO Log_Backhauling Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_Backhauling_Request</fullName>
        <active>true</active>
        <label>PO Log Backhauling Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_CircuitiDiretti_Collegamento</fullName>
        <active>true</active>
        <label>PO_Log_CircuitiDiretti_Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_CircuitiDiretti_Ordine</fullName>
        <active>true</active>
        <label>PO_Log_CircuitiDiretti_Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_CircuitiDiretti_Request</fullName>
        <active>true</active>
        <label>PO_Log_CircuitiDiretti_Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_DarkFiber_Collegamento</fullName>
        <active>true</active>
        <label>PO Log DarkFiber Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_DarkFiber_Ordine</fullName>
        <active>true</active>
        <label>PO Log DarkFiber Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_DarkFiber_Request</fullName>
        <active>true</active>
        <label>PO Log DarkFiber Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLease_Collegamento</fullName>
        <active>true</active>
        <label>PO Log FiberLease Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLease_Ordine</fullName>
        <active>true</active>
        <label>PO Log FiberLease Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLease_Request</fullName>
        <active>true</active>
        <label>PO Log FiberLease Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLink_Collegamento</fullName>
        <active>true</active>
        <label>PO Log FiberLink Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLink_Ordine</fullName>
        <active>true</active>
        <label>PO Log FiberLink Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_FiberLink_Request</fullName>
        <active>true</active>
        <label>PO Log FiberLink Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_P2PBase_Collegamento</fullName>
        <active>true</active>
        <label>PO Log P2PBase Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_P2PBase_Ordine</fullName>
        <active>true</active>
        <label>PO Log P2PBase Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_P2PBase_Request</fullName>
        <active>true</active>
        <label>PO Log P2PBase Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Log_P2P_Attiva_KIT</fullName>
        <active>true</active>
        <label>PO - P2P Attiva - KIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_P2PAttiva_Request</fullName>
        <active>true</active>
        <label>P2P Attiva Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_P2P_Attiva_Ordine</fullName>
        <active>true</active>
        <label>P2P Attiva Ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_P2P_Attiva_VLAN</fullName>
        <active>true</active>
        <label>PO - P2P Attiva - VLAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_PP_COS</fullName>
        <active>true</active>
        <label>PO - PP - COS</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_PP_KIT</fullName>
        <active>true</active>
        <label>PO - PP - KIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_PP_VLAN</fullName>
        <active>true</active>
        <label>PO - PP - VLAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_SA_CD_Log_ChangeOrderRequest</fullName>
        <active>true</active>
        <label>PO_SA_CD_Log_ChangeOrderRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_SA_CD_Log_GPONPRequest</fullName>
        <active>true</active>
        <description>RecordType per le request di attivazione dei servizi passivi afferenti ai cluster C e D</description>
        <label>PO - SA - CD - GponPassivaRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_SA_CD_Log_OpenStreamRequest</fullName>
        <active>true</active>
        <label>PO - SA - CD - OpenStreamRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_SA_FiberRequest</fullName>
        <active>true</active>
        <label>PO - SA - FiberRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_TP_TicketProvisioning_sLog</fullName>
        <active>true</active>
        <label>PO - TP - TicketProvisioningRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_TT_TroubleTicketRequest</fullName>
        <active>true</active>
        <label>PO - TT - TroubleTicketRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSM_WS_OUT_ACK_NACK</fullName>
        <active>true</active>
        <label>PSM_WS_OUT_ACK_NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSM_WS_OUT_Annullamento</fullName>
        <active>true</active>
        <label>PSM WS OUT Annullamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSM_WS_OUT_Attivazione</fullName>
        <active>true</active>
        <label>PSM WS OUT Attivazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSM_WS_OUT_Cessazione</fullName>
        <active>true</active>
        <label>PSM WS OUT Cessazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_To_BILL</fullName>
        <active>true</active>
        <label>SF To BILL</label>
    </recordTypes>
    <recordTypes>
        <fullName>TT_ACK</fullName>
        <active>true</active>
        <label>TT - ACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>TT_NACK</fullName>
        <active>true</active>
        <label>TT - NACK</label>
    </recordTypes>
    <recordTypes>
        <fullName>TroubleTicketNotify</fullName>
        <active>true</active>
        <label>TroubleTicketNotify</label>
    </recordTypes>
    <recordTypes>
        <fullName>TroubleTicketRequest</fullName>
        <active>true</active>
        <label>TroubleTicketRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trouble_Ticket_Richiesta_Scartata</fullName>
        <active>true</active>
        <label>Trouble Ticket - Richiesta Scartata</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>